[package]
name = "heso-engine-js"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "heso JS engine. QuickJS via rquickjs plus an agent-shaped DOM, event loop, timers, seeded RNG, and click/fill/submit bridges for the interactive read path."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# Phase 1B adds the agent-shaped DOM as #[rquickjs::class]-backed
# Rust types — needs `classes` (Class<T>, define, instance),
# `properties` (getters/setters), and `macro` (derive macros).
# `loader` is enabled in Phase 1C item M-A (real ES module support
# for `<script type="module">`): wires the project's HTTP-backed
# `Resolver` + `Loader` (`src/modules.rs`) into the runtime via
# `Runtime::set_loader`, so `import` / `export` resolve dependencies
# against the page URL through the shared `reqwest::Client`. See
# WHATWG HTML §8.1.3 Modules and `src/modules.rs` for the spec map.
#
# `disable-assertions` strips QuickJS's debug-only C-level assertions
# (compiles with `-DNDEBUG`). Without this, two real pages — `https://
# astro.build/` and `https://vercel.com/` — abort `heso eval-dom` on
# engine drop with one of two QuickJS assertions:
#   - `assert(list_empty(&rt->gc_obj_list))` (`quickjs.c:2205`)
#   - `assert(p->ref_count > 0)` (`quickjs.c:6183` — gc_decref_child)
# Both shapes are upstream-known: see bellard/quickjs#467 (CVE-
# 2025-69653, `Iterator.prototype.find` on a DOM-Element-backed array
# trips an assertion in shutdown GC because QuickJS's mark-decref-
# sweep can't break the iterator-helper-to-DOM-element cycle when
# Rust holds the elements via `Class<T>` registrations). With NDEBUG
# defined, `js_free_rt` proceeds past the failed assert and the
# runtime memory pool is freed via `rt->mf.js_free(ms->opaque, rt)`
# in one shot — so the leaked GC objects' memory IS released, just
# without the per-object book-keeping pass. The minimal repro lives
# at `crates/heso-engine-js/tests/engine_drop_reproducer.rs`. See
# the explicit `Drop` impl on [`JsEngine`] for the host-side cleanup
# that complements this — drains Persistents, microtasks, module
# state, and forces a final GC so the bypassed assertion is never
# the only line of defense.
rquickjs = { version = "0.11", features = ["classes", "properties", "macro", "loader", "disable-assertions"] }
# heso-engine-fetch supplies the protocol-level fetch + action graph
# we'll wire DOM access against once mutations + events land.
heso-engine-fetch = { path = "../heso-engine-fetch" }
# dom_query is the load-bearing mutable DOM under the JS-DOM bridge,
# chosen in research/existing-art/rquickjs-dom-precedents.md. It owns
# the parse tree (`Document`), exposes a jQuery-like surface
# (`Selection`, `NodeRef`) with attribute / class / child mutation,
# and is `html5ever`-backed so it matches the rest of the workspace.
# The crate has had 27 breaking minor releases — pin to exactly
# 0.28.0 (the only 0.28.x at time of writing). Bumping is a deliberate
# act, not an automatic minor lift. See ADR 0014.
dom_query = "=0.28.0"
# Phase 2 determinism shims (per ADR 0008): seed a single ChaCha20 PRNG
# from the session's `--seed N` value and route `Math.random`,
# `crypto.getRandomValues`, and `crypto.randomUUID` through it so two
# runs of the same script with the same seed produce byte-identical
# observable output. `rand_chacha::ChaCha20Rng` is portable across
# platforms and library versions (unlike `StdRng`), which is the
# property we actually need. See `src/rng.rs`.
rand = "0.8"
rand_chacha = "0.3"
# Phase 1C item C: `fetch()` inside JS. Shares the workspace
# `reqwest::Client` (same TLS, gzip/brotli, HTTP/2 settings as the
# static `heso-engine-fetch` path) so cookies and (when item M
# lands) recorded-network playback stay coherent. See `src/fetch.rs`
# and `decisions/0014` (Phase 2 stdlib subset row).
#
# `multipart` is enabled for PR-1 (real form submission per WHATWG
# §4.10.22) so `JsSession::submit` can POST `multipart/form-data`
# bodies via `reqwest::multipart::Form` instead of hand-rolling the
# boundary + part headers. See `src/form_submit.rs`.
reqwest = { workspace = true, features = ["multipart"] }
tokio = { workspace = true }
# Shared cookie jar (item: `document.cookie` real wiring). Both crates
# come from the workspace so the type that `FetchEngine` puts into
# `reqwest::Client::cookie_provider` is identical to the one
# `crate::cookies` reads from when JS calls `document.cookie`. See
# `crates/heso-engine-js/src/cookies.rs` for the bridge.
cookie_store.workspace = true
reqwest_cookie_store.workspace = true
# Session URL tracking (`crate::session::JsSession`): the page session
# owns its current URL so navigation across steps is observable on the
# Rust side. Matches the rest of the workspace's `url = 2`.
url = { workspace = true }
# `atob` / `btoa` base64 globals (item: trivial browser-globals batch).
# Already a transitive dep via reqwest; pinning here makes the
# dependency explicit so the engine globals don't rot if a transitive
# lifts it. 0.22 is the modern API (`Engine::encode`/`Engine::decode`).
base64 = "0.22"
# `regex` powers the `--url-matches REGEX` wait condition (see
# `src/wait_for.rs`). Matches Playwright's `page.waitForURL` contract
# (any URL/regex string the agent supplies is compiled here). Already
# a workspace dep — same crate used by `heso-trace`, no new top-level
# dep added.
regex.workspace = true

[dev-dependencies]
# wiremock-rs: localhost mock server for the in-JS fetch tests.
# Apache-2.0, mocking-only (recording is item M).
wiremock = "0.6"
tokio = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
