[package]
name = "heso-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Internal primitive-operation types shared between the trace runner and the engine. Scheduled for deletion as part of the ADR 0017 phase-2 cleanup; new code should consume `heso-core` and `heso-engine-fetch` directly."

[dependencies]
heso-core = { path = "../heso-core" }
heso-engine-api = { path = "../heso-engine-api" }
blake3.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
