[package]
name = "heso-trace-exec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Trace runner used by `heso open --receipt`: walks a Trace, drives the engine, and produces a signed Receipt. Scheduled for deletion in the ADR 0017 phase-2 cleanup once receipt minting moves into `heso-cli` directly."

[dependencies]
heso-core = { path = "../heso-core" }
heso-engine-api = { path = "../heso-engine-api" }
heso-primitives = { path = "../heso-primitives" }
heso-trace = { path = "../heso-trace" }

[dev-dependencies]
blake3.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
