[package]
name = "heso-trace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Trace AST types (Trace re-exported), Receipt, Cost, Mode, ContentHash, and BLAKE3 trace hashing. Pure data — no engine dependency."

[dependencies]
heso-primitives = { path = "../heso-primitives" }
serde = { workspace = true }
serde_json.workspace = true
blake3.workspace = true

[dev-dependencies]
heso-core = { path = "../heso-core" }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
